<resources>
    <string name="app_name">Enterprise File Transfer</string>
    <string name="device_discovery">Device Discovery</string>
    <string name="available_devices">Available Devices</string>
    <string name="no_devices_found">No devices found</string>
    <string name="searching_devices">Searching for devices...</string>
    <string name="select_files">Select Files</string>
    <string name="send_files">Send Files</string>
    <string name="receive_files">Receive Files</string>
    <string name="transfer_progress">Transfer Progress</string>
    <string name="transfer_complete">Transfer Complete</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="cancel_transfer">Cancel Transfer</string>
    <string name="retry_transfer">Retry Transfer</string>
    <string name="device_name">Device Name</string>
    <string name="device_status">Status</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="file_size">File Size</string>
    <string name="transfer_speed">Transfer Speed</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="files_selected">%d files selected</string>
    <string name="permission_required">Permission Required</string>
    <string name="storage_permission_message">Storage permission is required to access files</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="encryption_enabled">End-to-end encryption enabled</string>
    <string name="secure_transfer">Secure Transfer</string>
</resources>
